--- a/research.html
+++ b/research.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research - Minimalist Site</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .tfdf-section {
+            background-image: url('path/to/your-image.jpg');
+            background-size: cover; /* Ensures the image covers the entire section */
+            background-position: center; /* Centers the image */
+            padding: 20px; /* Add padding to ensure text is readable */
+            color: white; /* Ensures text is readable on a potentially dark background */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -23,7 +32,7 @@
             <h1>Research</h1>
             <p>Details about your research interests, publications, etc.</p>
             </section>
-        <section class="content">
+        <section class="content tfdf-section">
             <h2>TFDF</h2>
             <p>The Theory-First Development Framework (TFDF) reimagines AI innovation by prioritizing mathematical rigor over empirical trial-and-error. Traditional AI development often relies on iterative experiments to validate methods, leading to resource-intensive processes and unpredictable failures. TFDF addresses this by grounding every design decision in domain-specific theoretical guarantees—ensuring stability, scalability, and safety before implementation. At its core, TFDF enforces a structured workflow: (1) defining axioms (e.g., "no codebook collapse" for quantization systems), (2) validating these axioms via proofs of error bounds, convergence, and information preservation, and (3) benchmarking against existing methods using theoretical metrics like computational complexity.</p>
             </section>
