--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         .tfdf-section {
-            background-image: url('path/to/your-image.jpg');
+            background-image: url('assets/tfdf.png');
             background-size: cover; /* Ensures the image covers the entire section */
             background-position: center; /* Centers the image */
             padding: 20px; /* Add padding to ensure text is readable */
