--- a/research.html
+++ b/research.html
@@ -27,16 +27,22 @@
         </nav>
     </header>
 
-    <main>
-        <section class="content">
-            <h1>Research</h1>
-            <p>Details about your research interests, publications, etc.</p>
-            </section>
-        <section class="content tfdf-section">
-            <h2>TFDF</h2>
-            <p>The Theory-First Development Framework (TFDF) reimagines AI innovation by prioritizing mathematical rigor over empirical trial-and-error. Traditional AI development often relies on iterative experiments to validate methods, leading to resource-intensive processes and unpredictable failures. TFDF addresses this by grounding every design decision in domain-specific theoretical guarantees—ensuring stability, scalability, and safety before implementation. At its core, TFDF enforces a structured workflow: (1) defining axioms (e.g., "no codebook collapse" for quantization systems), (2) validating these axioms via proofs of error bounds, convergence, and information preservation, and (3) benchmarking against existing methods using theoretical metrics like computational complexity.</p>
-            </section>
-    </main>
+    <h2>Collapsible Sections</h2>
+
+    <button type="button" class="collapsible">Open Section 1</button>
+    <div class="content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+
+    <button type="button" class="collapsible">Open Section 2</button>
+    <div class="content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+
+    <button type="button" class="collapsible">Open Section 3</button>
+    <div class="content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
 
     <footer>
         <p>&copy; 2025 Your Name</p>
